import { Text, View } from 'react-native'

export default function SpikeLibrary() {
  return (
    <View testID="spike-screen-library">
      <Text>Library</Text>
    </View>
  )
}
