import { Text, View } from 'react-native'

export default function SpikePlaylists() {
  return (
    <View testID="spike-screen-playlists">
      <Text>Playlists</Text>
    </View>
  )
}
